HW4/javali_tests/others/new/HW3_Aroch/NoMain.javali.err
Debug information for file: javali_tests/HW3_team/NoMain.javali
AST Resulting From Parsing Stage:
ClassDecl (name: A, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | Seq ()
Error message from reference is: No Main class found

Phase semantic failed because we expected to see:
INVALID_START_POINT
But we actually saw:
OK
The difference is:
At line   1 /   1:
< INVALID_START_POINT
> OK

