HW4/javali_tests/others/new/HW3_Aroch/NoMain.javali
// Tests missing main class
class A {
	void main(){}
}